Drop final modifiers